# SD_image_upscaler

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: rehearsal.yaml  sd15_main.yaml  sd15_stage_b.yaml
data/: human_ranks.template.json
docs/: diffusion_upscaling_project_brief.docx  follow_on_project.md  project_plan.md
notebooks/: 00_smoke.ipynb  01_baseline.ipynb  025_vae_swap.ipynb  02_two_stage.ipynb  035_tiny_diffusion.ipynb  03_eval.ipynb  06_supir_head_to_head.ipynb
outputs/supir/: captions.json  subset.json
scripts/: benchmark_pipeline.py  build_final_leaderboard.py  build_training_pairs.py  caption_dataset.py  dedup_and_check_leakage.py  eval_lora_sd15.py  eval_lora_stage_b.py  fetch_unsplash_filtered.py  migrate_test_images.py  runpod_bootstrap.sh  score_supir_hypir.py  upload_dataset_to_hf.py  upload_lora_stage_b_to_hf.py
src/upscaler/: __init__.py  baselines.py  captioning.py  dataset.py  degradations.py  eval_metrics.py  lora_train.py  lora_train_sd15_stage_b.py  pipeline.py  testset.py  tiling.py
tests/: test_degradations.py  test_eval_metrics.py  test_package.py  test_pipeline_smoke.py  test_testset.py  test_tiling.py
